# seajay-chess

./: .clang-format  .gitignore  BUILD_MODES.md  BUILD_SYSTEM_SUMMARY.md  CLA.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  EXTERNAL_TOOLS.md  LICENSE-COMMERCIAL.md  Makefile  Makefile.direct  Makefile.openbench  OPENBENCH_FULL_EXTRAPOLATED_PST.txt  OPENBENCH_SPSA_RESULTS.txt  PPH2_PERFORMANCE_FIX.md  PST_BUG_FIX_SUMMARY.md  PST_EXTRAPOLATION_PLAN.md  README.md  SEE_remediation_plan.md  SPRT_SUCCESS_SUMMARY.md  SPSA_ENDGAME_TUNING_4H.md  SPSA_QUICK_TEST.md  STAGE2_IMPLEMENTATION_SUMMARY.md  STAGE9B_DEBUG_CLEANUP_COMPLETE.md  STAGE9B_DEBUG_CODE_AUDIT.md  STAGE9B_SPRT_FAILURE_ANALYSIS.md  Stage12_TT_Improvements_Summary.md  TT_remediation_plan.md  absolute_minimal_test  absolute_minimal_test.cpp  analyze_fen  analyze_fen_issue.cpp  analyze_games.py  analyze_margin_configs.sh  analyze_move_ordering.cpp  analyze_pgn.py  analyze_position.sh  analyze_positions.sh  analyze_pvs_bug.md  (+396 more)
.claude/: settings.json  settings.local.json
.claude/agents/: chess-engine-expert.md  cpp-pro.md  debugger.md  dev-diary-chronicler.md
.devcontainer/: .env.template  Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  setup-machine.sh
analysis_reports/: analysis_20250829_065124.txt
binaries/: STAGE15_BINARIES.md  STAGE_COMPARISON_BINARIES.md  seajay-stage10-x86-64  seajay-stage11-candidate2-x86-64  seajay-stage11-f2ad9b5  seajay-stage11-x86-64  seajay-stage12-ffa0e44  seajay-stage12-tt-candidate1-x86-64  seajay-stage13-869495e  seajay-stage13-sprt-fixed  seajay-stage14-final  seajay-stage14-rebuilt-from-ce52720  seajay-stage14-sprt-candidate1-GOLDEN  seajay-stage14-sprt-candidate10-conservative  seajay-stage14-sprt-candidate2  seajay-stage14-sprt-candidate3  seajay-stage14-sprt-candidate4  seajay-stage14-sprt-candidate5  seajay-stage14-sprt-candidate6-mvvlva  seajay-stage14-sprt-candidate7-FIXED  seajay-stage14-sprt-candidate8-NO-IFDEFS  seajay-stage14-sprt-candidate9  seajay-stage15-original  seajay-stage15-properly-fixed  seajay-stage7-c09a377  seajay-stage8-66a6637  seajay-stage9-fe33035  seajay_stage15_pst_bugfix  seajay_stage15_tuned_fixed
build_asan/: CTestTestfile.cmake  Makefile
build_asan_rel/: CTestTestfile.cmake  Makefile
build_bisect/: CTestTestfile.cmake  Makefile
build_macos/: CTestTestfile.cmake  Makefile  seajay
docs/: 090125_evaluation_bug_details.md  BUG_illegal_king_replay.md  BUILD_SYSTEM.md  CLEANUP_SUMMARY.md  FEN_IMPLEMENTATION_SUMMARY.md  SPSA_INTEGER_BUG_AUDIT.md  SPSA_UCI_EG_TUNING.md  UCI_USAGE_GUIDE.md  move_ordering.md  stage11_mvv_lva_summary.md
golden_binaries/: README.md
instruction_test/: Makefile.test  instruction_test.cpp  test_auto  test_compilation.sh
logs/: move_picker_depth10_stagewrap_badcaptures.diff
openbench-build/: CTestTestfile.cmake  Makefile  seajay
project_docs/: BACK_TO_GOOD_REMEDIATION_PLAN.md  Git_Strategy_for_SeaJay.txt  README.md  SeaJay Chess Engine Development - Master Project Plan.md  Shared Bitboard Evaluation Refactor Plan.md  deferred_items_tracker.md  dev_diary.md  documentation_to_main_strategy.md  integration_branches.md  lmr_tuning_plan.md  project_status.md  stage2_position_management_plan.md  stage_15_day_6_summary.md
simple-build/: CTestTestfile.cmake  Makefile  seajay
sprt_configs/: run_sprt_test.sh  see_full_vs_mvvlva.ini  see_pruning_aggressive.ini  see_pruning_aggressive_vs_conservative.ini  see_pruning_conservative.ini
sprt_results/: full_historical_test_results.txt
src/: main.cpp  version.h
stage15_debugging/: FINAL_RESOLUTION.md  README.md  RESOLUTION.md  WHITE_BIAS_ANALYSIS.md  check_color_distribution.sh  debug_history.md  proper_fix_analysis.md  pst_analysis.md  quick_bias_test.sh  test_all_white_bias.sh  test_methodology.sh  test_original_candidate.sh  test_properly_fixed.sh  test_stage10_bias.sh  test_stage14_bias.sh  test_white_bias.sh  validate_fix.sh
tests/: BUG_003_RESOLUTION.md  Makefile  alphabeta_edge_cases.cpp  alphabeta_validation_test.cpp  benchmark_draws.cpp  benchmark_results_20250814_114006.txt  bug_003_test_plan.md  compare_see_modes.sh  debug_attacks.cpp  debug_ep.cpp  debug_ep2.cpp  debug_failing_tests.cpp  debug_pawn_attacks.cpp  debug_promotion.cpp  debug_promotion_simple.cpp  debug_test_9.cpp  differential_testing.h  draw_detection_answers.md  draw_detection_edge_cases.md  game_playing_validation.cpp  magic_bitboards_test.cpp  magic_performance_test.cpp  magic_symmetry_test.cpp  minimal_magic_test.cpp  perft_zobrist_simple.cpp  perft_zobrist_validation.cpp  quick_alphabeta_test.cpp  quick_perf_test.cpp  quick_perft  see_pruning_bench.sh  see_pruning_performance.cpp  see_pruning_sprt.sh  simple_alphabeta_validation.cpp  simple_game_test.cpp  simple_match_test.py  simple_perft_tt_test.cpp  stage10_phase3_summary.md  tactical_quiescence_test.cpp  tactical_quiescence_validation.cpp  tactical_simple.cpp  (+123 more)
tools/: README.md  README_tactical_test.md  analyze_position.sh  build_for_macos.sh  collect_aggressive_null_candidates.py  depth_vs_time.csv  depth_vs_time.py  eval_compare.py  eval_compare.sh  eval_position.sh  explain_move_eval.sh  ks_sanity.sh  measure_null_move_pack.py  node_explosion_diagnostic.sh  qsearch_benchmark.cpp  qsearch_memory_analysis.cpp  run_tactical_investigation.sh  run_wac_237_check.sh  run_wac_test.sh  search_impact.sh  selectivity_probe.py  stacked_telemetry.py  tactical_failures_2025-09-06_16-26-20.csv  tactical_failures_2025-09-07_11-48-51.csv  tactical_failures_2025-09-20_09-50-55.csv  tactical_failures_2025-10-02_17-47-31.csv  tactical_failures_2025-10-05_15-56-27.csv  tactical_failures_2025-10-09_21-55-31.csv  tactical_failures_2025-10-12_21-17-33.csv  tactical_investigation.py  tactical_investigation_2025-09-18_20-51-44.csv  tactical_test.py  tactical_test.sh  tactical_test_2025-09-06_16-26-20.csv  tactical_test_2025-09-06_16-35-02.csv  tactical_test_2025-09-07_11-48-51.csv  tactical_test_2025-09-20_09-50-55.csv  tactical_test_2025-10-02_17-47-31.csv  tactical_test_2025-10-05_15-56-27.csv  tactical_test_2025-10-09_21-55-31.csv  (+3 more)
(+781 files in other folders)
